added image, hero text and button to index.html file and created images direction

--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
     <a href="https://en.wikipedia.org/wiki/Dog">What is a dog?</a>
     <a href="https://www.akc.org/dog-breeds/">Dog breeds</a>
     <a href="https://unsplash.com/s/photos/dogs">Dog pictures</a>
+</div>
+<div class="hero-and-image">
+    <h1>Things to know about dogs</h1>
+    <p>What is a dog? What are dog breeds? Facts about dogs you can find here.</p>
+    <img src="images/dog-image.jpg">
+    <div class="button">
+        <a href="https://www.google.com/search?q=why+dogs+lick+your+face&oq=why+dogs&gs_lcrp=EgZjaHJvbWUqBwgAEAAYgAQyBwgAEAAYgAQyBggBEEUYOTIHCAIQABiABDIHCAMQABiABDIHCAQQABiABDIHCAUQABiABDIHCAYQABiABDIHCAcQABiABDIHCAgQABiABDIHCAkQABiABNIBCDE1MThqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">Why dogs lick your face</a>
+    </div>
+</div>
 </body>
 </html>
