finished index.html and anned header to styles.css

--- a/index.html
+++ b/index.html
@@ -3,22 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facts about the dogs</title>
+    <title>TOP Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p class="header-logo">Facts about the dogs</p> 
-<div class="header-links">
-    <a href="https://en.wikipedia.org/wiki/Dog">What is a dog?</a>
-    <a href="https://www.akc.org/dog-breeds/">Dog breeds</a>
-    <a href="https://unsplash.com/s/photos/dogs">Dog pictures</a>
-</div>
-<div class="hero-and-image">
-    <h1>Things to know about dogs</h1>
-    <p>What is a dog? What are dog breeds? Facts about dogs you can find here.</p>
-    <img src="images/dog-image.jpg">
-    <div class="button">
-        <a href="https://www.google.com/search?q=why+dogs+lick+your+face&oq=why+dogs&gs_lcrp=EgZjaHJvbWUqBwgAEAAYgAQyBwgAEAAYgAQyBggBEEUYOTIHCAIQABiABDIHCAMQABiABDIHCAQQABiABDIHCAUQABiABDIHCAYQABiABDIHCAcQABiABDIHCAgQABiABDIHCAkQABiABNIBCDE1MThqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">Why dogs lick your face</a>
-    </div>
-</div>
+        <div class="header">
+            <header>Header Logo</header>
+            <div class="links">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
+            </div>
+        </div>
+        <div class="container1">
+    <p>This website is awesome</p>
+    <p>This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast.</p>
+    <img src="image.jpg" this is a placeholder for an image>   
+        </div>
+        <div class="container2">
+            <h2>Some random information</h2>
+            <div class="information1"></div>
+            <div class="information2"></div>
+            <div class="information3"></div>
+            <div class="information4"></div>
+        </div>
+        <div class="container3">
+            <i>“Your time is limited, so don’t waste it living someone else’s life.”</i>
+            <p>-Steve Jobs</p>
+        </div>
+        <div class="container4">
+            <h1>Call to action! It`s time!</h1>
+            <p>Sign up for our product by clicking thjhat button right over there!</p>
+            <button>Sign up</button>
+        </div>
 </body>
 </html>
