--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
             </div>
         </div>
         <div class="container1">
-    <p>This website is awesome</p>
-    <p>This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast.</p>
-    <img src="image.jpg" this is a placeholder for an image>   
+            <div class="hero">
+    <p id="hero-main">This website is awesome</p>
+    <p id="hero-secondary">This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast.</p>
+    <button>Sign up</button>
+    </div>
+    <div class="image">
+<img src="image.jpg" this is a placeholder for an image>   
+    </div>
         </div>
         <div class="container2">
             <h2>Some random information</h2>
@@ -36,5 +41,6 @@
             <p>Sign up for our product by clicking thjhat button right over there!</p>
             <button>Sign up</button>
         </div>
+        <footer>Copyright Jakub Bilicki @ The Odin Project 2023</footer>
 </body>
 </html>
