--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         </div>
         <div class="container2">
             <h2>Some random information</h2>
+        <div class="info-container">
             <div class="information1"></div>
             <div class="information2"></div>
             <div class="information3"></div>
             <div class="information4"></div>
+        </div>
         </div>
         <div class="container3">
             <i>“Your time is limited, so don’t waste it living someone else’s life.”</i>
